# pynes

./: .gitignore  README.md  main.py  opset.yaml  pyproject.toml
.github/workflows/: pytest.yml  unit-test.yml
conf/: logging.yaml
log/: hello.yaml  nestest.yaml  nestest4000.yaml  nestest7000.yaml
pynes/: __init__.py  cassette.py  cpu.py  interrupts.py  ppu.py  ram.py  renderer.py  video.py
test_log/: nestest.yaml  nestest1000.yaml  nestest3000.yaml
tests/: test_cpu.py  test_pynes.py
